--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "@vue/reactivity": "^3.2.33",
     "@vueuse/core": "^8.4.2",
     "eslint": "^8.9.0",
+    "flatted": "^3.2.9",
     "fs-extra": "^10.0.1",
     "fuse.js": "^6.6.2",
     "get-port": "^6.1.2",
@@ -193,7 +194,7 @@
     "semver": "^7.3.5",
     "tree-kill": "^1.2.2",
     "tsup": "^5.12.7",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "vite": "^2.8.6",
     "vitest": "latest",
     "ws": "^8.6.0"
